# supersingular-curve-gen

./: .env  .gitignore  Cargo.toml  bibliography.bib  crater_size_experiments.sage  data.txt  discrete_log.sage  division_polynomial.sage  endo_ring.sage  endomorphism_old.py  finite_fields.sage  ideas.tex  isogeny_graph.sage  isogeny_volcano.sage  main.sage  modular_polynomial.sage  new_idea.sage  notes.tex  od_endo_ring.sage  order_class_group.sage  out.txt  presentation.tex  proposal.tex  search_curves.sage  ss_endo_ring.sage  vulcanoes.sage
src/: cache.rs  main.rs
thesis/: abstract.tex  acknowledgements.tex  chapter1.tex  chapter2.tex  chapter_conclusion.tex  chapter_crypto.tex  chapter_elliptic_curves.tex  chapter_generating_curves.tex  chapter_introduction.tex  chapter_isogeny_graphs.tex  data.txt  main.tex  section_ordinary_graphs.tex  vulcano_sketch1.ipe  vulcano_sketch2.ipe  vulcano_sketch3.ipe
